<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_selector"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite_selector"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history_selector"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_selector"
        android:title="@string/nav_profile" />
</menu>
