<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <FrameLayout
        android:id="@+id/decorOverlayContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:translationZ="100dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="12dp"
        android:layout_margin="24dp"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_welcome_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="36sp"
                android:textStyle="bold"
                android:paddingBottom="24dp"
                android:textColor="#4d412e"
                android:fontFamily="@font/lora"
                android:paddingTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_mail"
                    app:tint="#8B5E3C"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="14dp"
                    android:textColor="#000"
                    android:fontFamily="@font/objective_bold"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_password_new"
                    app:tint="#8B5E3C"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:fontFamily="@font/objective_bold"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:padding="14dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/objective_bold"
                android:background="@drawable/bg_login_button" />

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#585858"
                android:textSize="14sp"
                android:paddingTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/objective_black"/>

            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#817d76"
                android:textSize="12sp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/objective_bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/darkOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#99000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/languageButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_margin="8dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/flag_bosnia"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:src="@drawable/flag_bosnia"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/text_bosnian"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/flag_usa"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:src="@drawable/flag_uk"
            android:contentDescription="@string/text_english"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
