<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <ImageView
        android:id="@+id/decorImage"
        android:layout_width="285dp"
        android:layout_height="172dp"
        android:src="@drawable/sipaj"
        android:scaleType="fitStart"
        android:contentDescription="@null"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="-48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/registerCard"
        android:translationZ="100dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/registerCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="12dp"
        android:layout_margin="24dp"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_welcome_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textSize="36sp"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:paddingTop="8dp"
                android:textColor="#4d412e"
                android:fontFamily="@font/lora"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:paddingHorizontal="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_username"
                    app:tint="#8B5E3C"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:textColor="#000"
                    android:fontFamily="@font/objective_bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:paddingHorizontal="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_mail"
                    app:tint="#8B5E3C"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:textColor="#000"
                    android:fontFamily="@font/objective_bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:paddingHorizontal="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_password_new"
                    app:tint="#8B5E3C"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:textColor="#000"
                    android:fontFamily="@font/objective_bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_password_new"
                    app:tint="#8B5E3C"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:background="@android:color/transparent"
                    android:textColor="#000"
                    android:fontFamily="@font/objective_bold"/>
            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_register"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:padding="12dp"
                android:background="@drawable/bg_register_button"
                android:fontFamily="@font/objective_bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/darkOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#99000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/languageButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_margin="8dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/flag_bosnia"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:src="@drawable/flag_bosnia"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/text_bosnian"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/flag_usa"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:src="@drawable/flag_uk"
            android:contentDescription="@string/text_english"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
